WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311441
Fix the build after
310527@main
https://bugs.webkit.org/show_bug.cgi?id=311441
Summary
Fix the build after 310527@main
Simon Fraser (smfr)
Reported
2026-04-03 14:27:55 PDT
WebCore.framework/PrivateHeaders/AutomationInstrumentation.h:35:10: error: double-quoted include "FrameIdentifier.h" in framework header, expected angle-bracketed instead [-Werror,-Wquoted-include-in-framework-header]
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-03 14:28:01 PDT
<
rdar://problem/174038711
>
Simon Fraser (smfr)
Comment 2
2026-04-03 14:30:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61995
EWS
Comment 3
2026-04-03 14:34:25 PDT
Committed
310536@main
(c96ca4bab9e2): <
https://commits.webkit.org/310536@main
> Reviewed commits have been landed. Closing PR #61995 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug