Fix the build after 310527@main https://bugs.webkit.org/show_bug.cgi?id=311441 rdar://174038711

Unreviewed build fix.

Need framework-style includes.

* Source/WebCore/automation/AutomationInstrumentation.h:

Canonical link: https://commits.webkit.org/310536@main